# IntegralCommunication

./: CMakeLists.txt  Makefile  README.md  library.json
.github/workflows/: ci.yml
include/: seven_bit_encoding.h
src/: seven_bit_encoding.cpp
tests/: seven_bit_encoding_tests.cpp
